[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npbc"
version = "0.1.0"
description = "Natural Posterior Behavior Cloning"
authors = [
    { name = "Trevor Johst", email = "trejohst@mit.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.1",
    "einops>=0.8.0",
    "normflows>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "ipykernel",
    "ipympl"
]